--- a/source/scoreboard/level2.html
+++ b/source/scoreboard/level2.html
@@ -51,224 +51,79 @@
 				</div>
 			</div>
 		</div>
-		<div id="block1" style="z-index: 4; width: 204px; height: 122px; left: 676px; bottom: 78px;" class="challenge_layout2">
-			<a href="#" onclick="displayList('list1')"><img style="margin-top: 0px; margin-left: 68px;" src="/images/bluechallenge.jpg" alt="list1"></a>
-			<div id="list1" class="challList" style="visibility: hidden">
-				<a href="#" onclick="loadChallange('1')"><img id="chall1_img" style="margin-top: -61px; margin-left: -136px;" src="/images/bluechallenge.jpg"></a>
-				<div id="chall1" class="description" onclick="$(this).hide()" style="top: -135px; margin-left: 27px">
-					<p id="chall1_name"></p>
-					<p id="chall1_points" class="center"></p>
-					<p id="chall1_html"></p>
-					<p><a id="chall1_file"></a>
-				</div>
-				<a href="#" onclick="loadChallange('2')"><img id="chall2_img"style="margin-top: -61px; margin-left: -68px;" src="/images/bluechallenge.jpg"></a>
-				<div id="chall2" class="description" style="top: -135px; margin-left: 95px">
-					<p id="chall2_name"></p>
-					<p id="chall2_points" class="center"></p>
-					<p id="chall2_html"></p>
-					<p><a id="chall2_file"></a></p>
-				</div>
-				<a href="#" onclick="loadChallange('3')"><img id="chall3_img" style="margin-top: -61px; margin-left: 0px;" src="/images/bluechallenge.jpg"></a>
-				<div id="chall3" class="description" style="top: -135px; margin-left: 163px">
-					<p id="chall3_name"></p>
-					<p id="chall3_points" class="center"></p>
-					<p id="chall3_html"></p>
-					<p><a id="chall3_file"></a></p>
-				</div>
+
+		<div id="chall" class="description">
+			<p id="chall_name"></p>
+			<p id="chall_points" class="center"></p>
+			<p id="chall_html"></p>
+			<p><a id="chall_file"></a>
+		</div>
+
+		<div id="block7" style="z-index: 3; width: 204px; height: 61px; bottom: 400px; left: 300px;" class="challenge_layout2">				
+			<a href="#" onclick="displayList('list7')"><img style="margin-top: 0px; margin-left: 68px;" src="/images/yellowchallenge.jpg" alt="list4"></a>
+			<div id="list7" class="challList" style="visibility: hidden">
+				<a href="#" onclick="loadChallange('25')"><img id="chall25_img" style="margin-top: -61px; margin-left: -136px;" src="/images/yellowchallenge.jpg"></a>
+				<a href="#" onclick="loadChallange('26')"><img id="chall26_img" style="margin-top: -122px; margin-left: 68px;" src="/images/yellowchallenge.jpg"></a>
+				<a href="#" onclick="loadChallange('27')"><img id="chall27_img" style="margin-top: -122px; margin-left: 136px;" src="/images/yellowchallenge.jpg"></a>
+				
 			</div>
 		</div>
 
-		<div id="block2" style="z-index: 3; width: 476px; height: 61px; left: 200px; bottom: 78px;" class="challenge_layout2">
-			<a href="#" onclick="displayList('list2')"><img style="margin-top: 0px; margin-left: 136px;" src="/images/bluechallenge.jpg" alt="list1"></a>
-			<div id="list2" class="challList" style="visibility: hidden">
-				<a href="#" onclick="loadChallange('3')"><img id="chall1_img" style="margin-top: -61px; margin-left: -136px;" src="/images/bluechallenge.jpg"></a>
-				<div id="chall3" class="description" onclick="$(this).hide()" style="top: -135px; margin-left: 27px">
-					<p id="chall3_name"></p>
-					<p id="chall3_points" class="center"></p>
-					<p id="chall3_html"></p>
-					<p><a id="chall3_file"></a>
-				</div>
-				<a href="#" onclick="loadChallange('4')"><img id="chall2_img"style="margin-top: -61px; margin-left: -68px;" src="/images/bluechallenge.jpg"></a>
-				<div id="chall4" class="description" style="top: -135px; margin-left: 95px">
-					<p id="chall4_name"></p>
-					<p id="chall4_points" class="center"></p>
-					<p id="chall4_html"></p>
-					<p><a id="chall4_file"></a></p>
-				</div>
-				<a href="#" onclick="loadChallange('3')"><img id="chall3_img" style="margin-top: -61px; margin-left: 0px;" src="/images/bluechallenge.jpg"></a>
-				<div id="chall3" class="description" style="top: -135px; margin-left: 163px">
-					<p id="chall3_name"></p>
-					<p id="chall3_points" class="center"></p>
-					<p id="chall3_html"></p>
-					<p><a id="chall3_file"></a></p>
-				</div>
-				<a href="#" onclick="loadChallange('4')"><img id="chall4_img" style="margin-top: -61px; margin-left: 68px;" src="/images/bluechallenge.jpg"></a>
-				<div id="chall4" class="description" style="top: -135px; margin-left: 231px">
-					<p id="chall4_name"></p>
-					<p id="chall4_points" class="center"></p>
-					<p id="chall4_html"></p>
-					<p><a id="chall4_file"></a></p>
-				</div>
-				<a href="#" onclick="loadChallange('5')"><img id="chall5_img" style="margin-top: -61px; margin-left: 136px;" src="/images/bluechallenge.jpg"></a>
-				<div id="chall5" class="description" style="top: -135px; margin-left: 299px">
-					<p id="chall5_name"></p>
-					<p id="chall5_points" class="center"></p>
-					<p id="chall5_html"></p>
-					<p><a id="chall5_file"></a></p>
-				</div>
-				<a href="#" onclick="loadChallange('6')"><img id="chall6_img" style="margin-top: -61px; margin-left: 204px;" src="/images/bluechallenge.jpg"></a>
-				<div id="chall6" class="description" style="top: -135px; margin-left: 367px">
-					
-					<p id="chall6_points"></p>
-					<p id="chall6_html"></p>
-					<p><a id="chall6_file"></a></p>
-				</div>
+		<div id="block1" style="z-index: 4; width: 138px; height: 122px; left: 546px; bottom: 78px;" class="challenge_layout2">
+			<a href="#" onclick="displayList('list1')"><img style="margin-top: 0px; margin-left: 68px;" src="/images/bluechallenge.jpg" alt="list1"></a>
+			<div id="list1" class="challList" style="visibility: hidden">
+				<a href="#" onclick="loadChallange('1')"><img id="chall1_img" style="margin-top: -61px; margin-left: -136px;" src="/images/bluechallenge.jpg"></a>
+				<a href="#" onclick="loadChallange('2')"><img id="chall2_img"style="margin-top: -61px; margin-left: -68px;" src="/images/bluechallenge.jpg"></a>
+				<a href="#" onclick="loadChallange('3')"><img id="chall3_img" style="margin-top: -122px; margin-left: 136px;" src="/images/bluechallenge.jpg"></a>
 			</div>
 		</div>
-		<div id="block3" style="z-index: 1; width: 136px; height: 122px; left: 200px; bottom: 139px;" class="challenge_layout2">
+
+		<div id="block2" style="z-index: 3; width: 476px; height: 61px; left: 70px; bottom: 78px;" class="challenge_layout2">
+			<a href="#" onclick="displayList('list2')"><img style="margin-top: 0px; margin-left: 136px;" src="/images/bluechallenge.jpg" alt="list1"></a>
+			<div id="list2" class="challList" style="visibility: hidden">
+				<a href="#" onclick="loadChallange('4')"><img id="chall4_img"style="margin-top: -61px; margin-left: -68px;" src="/images/bluechallenge.jpg"></a>
+				<a href="#" onclick="loadChallange('5')"><img id="chall5_img" style="margin-top: -61px; margin-left: 0px;" src="/images/bluechallenge.jpg"></a>
+				<a href="#" onclick="loadChallange('6')"><img id="chall6_img" style="margin-top: -61px; margin-left: 68px;" src="/images/bluechallenge.jpg"></a>
+			</div>
+		</div>
+
+		<div id="block3" style="z-index: 1; width: 136px; height: 122px; left: 70px; bottom: 139px;" class="challenge_layout2">
 			<a href="#" onclick="displayList('list3')"><img style="margin-top: 0px;" src="/images/redchallenge.jpg" alt="list2"></a>
 			<div id="list3" class="challList" style="visibility: hidden">
 				<a href="#" onclick="loadChallange('7')"><img id="chall7_img" style="margin-top: -61px; margin-left: -136px;" src="/images/redchallenge.jpg"></a>
-				<div id="chall7" class="description" style="top: -135px; margin-left: 27px">
-					<p id="chall7_points"></p>
-					<p id="chall7_html"></p>
-					<p><a id="chall7_file"></a>
-				</div>
 				<a href="#" onclick="loadChallange('8')"><img id="chall8_img" style="margin-top: -61px; margin-left: -68px;" src="/images/redchallenge.jpg"></a>
-				<div id="chall8" class="description" style="top: -135px; margin-left: 95px">
-					<p id="chall8_points"></p>
-					<p id="chall8_html"></p>
-					<p><a id="chall8_file"></a></p>
-				</div>
 				<a href="#" onclick="loadChallange('9')"><img id="chall9_img" style="margin-top: -61px; margin-left: 0px;" src="/images/redchallenge.jpg"></a>
-				<div id="chall9" class="description" style="top: -135px; margin-left: 163px">
-					<p id="chall9_points"></p>
-					<p id="chall9_html"></p>
-					<p><a id="chall3_file"></a></p>
-				</div>
 				<a href="#" onclick="loadChallange('10')"><img id="chall10_img" style="margin-top: -122px; margin-left: 136px;" src="/images/redchallenge.jpg"></a>
-				<div id="chall10" class="description" style="top: -135px; margin-left: 231px">
-					<p id="chall10_points"></p>
-					<p id="chall10_html"></p>
-					<p><a id="chall10_file"></a></p>
-				</div>
-				<a href="#" onclick="loadChallange('11')"><img id="chall11_img" style="margin-top: -122px; margin-left: 204px;" src="/images/redchallenge.jpg"></a>
-				<div id="chall11" class="description" style="top: -135px; margin-left: 299px">
-					<p id="chall11_points"></p>
-					<p id="chall11_html"></p>
-					<p><a id="chall11_file"></a></p>
-				</div>
+				<a href="#" onclick="loadChallange('11')"><img id="chall11_img" style="margin-top: -122px; margin-left: 204px;" src="/images/redchallenge.jpg"></a>>
 				<a href="#" onclick="loadChallange('12')"><img id="chall12_img" style="margin-top: -122px; margin-left: 272px;" src="/images/redchallenge.jpg"></a>
-				<div id="chall12" class="description" style="top: -135px; margin-left: 367px">
-					<p id="chall12_points"></p>
-					<p id="chall12_html"></p>
-					<p><a id="chall12_file"></a></p>
-				</div>
 			</div>
 		</div>
 		<div id="block4" class="step_layout">
 			<div id="block4" style="width: 204px; height: 61px; bottom: 134px; left: 195px;" class="challenge_layout2">
 				<a href="#" onclick="displayList('list4')"><img style="margin-top: 0px;" src="/images/greenchallenge.jpg" alt="list3"></a>
 				<div id="list4" class="challList" style="visibility: hidden">
-					<a href="#" onclick="loadChallange('13')"><img style="margin-top: -61px; margin-left: -136px;" src="/images/greenchallenge.jpg"></a>
-					<div id="chall13" class="description" style="top: -135px; margin-left: 27px">
-						<p id="chall13_points"></p>
-						<p id="chall13_html"></p>
-						<p><a id="chall13_file"></a>
-					</div>
-					<a href="#" onclick="loadChallange('14')"><img style="margin-top: -61px; margin-left: -68px;" src="/images/greenchallenge.jpg"></a>
-					<div id="chall14" class="description" style="top: -135px; margin-left: 95px">
-						<p id="chall14_points"></p>
-						<p id="chall14_html"></p>
-						<p><a id="chall14_file"></a></p>
-					</div>
-					<a href="#" onclick="loadChallange('15')"><img style="margin-top: -61px; margin-left: 0px;" src="/images/greenchallenge.jpg"></a>
-					<div id="chall15" class="description" style="top: -135px; margin-left: 163px">
-						<p id="chall15_points"></p>
-						<p id="chall15_html"></p>
-						<p><a id="chall15_file"></a></p>
-					</div>
-					<a href="#" onclick="loadChallange('16')"><img style="margin-top: -122px; margin-left: 136px;" src="/images/greenchallenge.jpg"></a>
-					<div id="chall16" class="description" style="top: -135px; margin-left: 231px">
-						<p id="chall16_points"></p>
-						<p id="chall16_html"></p>
-						<p><a id="chall16_file"></a></p>
-					</div>
-					<a href="#" onclick="loadChallange('17')"><img style="margin-top: -122px; margin-left: 204px;" src="/images/greenchallenge.jpg"></a>
-					<div id="chall17" class="description" style="top: -135px; margin-left: 299px">
-						<p id="chall17_points"></p>
-						<p id="chall17_html"></p>
-						<p><a id="chall17_file"></a></p>
-					</div>
-					<a href="#" onclick="loadChallange('18')"><img style="margin-top: -122px; margin-left: 272px;" src="/images/greenchallenge.jpg"></a>
-					<div id="chall18" class="description" style="top: -135px; margin-left: 367px">
-						<p id="chall18_points"></p>
-						<p id="chall18_html"></p>
-						<p><a id="chall18_file"></a></p>
-					</div>
+					<a href="#" onclick="loadChallange('13')"><img id="chall13_img" style="margin-top: -61px; margin-left: -136px;" src="/images/greenchallenge.jpg"></a>
+					<a href="#" onclick="loadChallange('14')"><img id="chall14_img" style="margin-top: -61px; margin-left: -68px;" src="/images/greenchallenge.jpg"></a>
+					<a href="#" onclick="loadChallange('15')"><img id="chall15_img" style="margin-top: -61px; margin-left: 0px;" src="/images/greenchallenge.jpg"></a>
+					<a href="#" onclick="loadChallange('16')"><img id="chall16_img" style="margin-top: -122px; margin-left: 136px;" src="/images/greenchallenge.jpg"></a>
+					<a href="#" onclick="loadChallange('17')"><img id="chall17_img" style="margin-top: -122px; margin-left: 204px;" src="/images/greenchallenge.jpg"></a>
+					<a href="#" onclick="loadChallange('18')"><img id="chall18_img" style="margin-top: -122px; margin-left: 272px;" src="/images/greenchallenge.jpg"></a>
 				</div>
 			</div>
 			<div id="block5" style="z-index: 2; width: 136px; height: 61px; bottom: 270px; left: 40px;" class="challenge_layout2">
 				<a href="#" onclick="displayList('list5')"><img style="margin-top: 0px;" src="/images/orangechallenge.jpg" alt="list4"></a>
 				<div id="list5" class="challList" style="visibility: hidden">
-					<a href="#" onclick="loadChallange('19')"><img style="margin-top: -61px; margin-left: -136px;" src="/images/orangechallenge.jpg"></a>
-					<div id="chall19" class="description" style="top: -135px; margin-left: 27px">
-						<p id="chall19_points"></p>
-						<p id="chall19_html"></p>
-						<p><a id="chall19_file"></a>
-					</div>
-					<a href="#" onclick="loadChallange('20')"><img style="margin-top: -61px; margin-left: -68px;" src="/images/orangechallenge.jpg"></a>
-					<div id="chall20" class="description" style="top: -135px; margin-left: 95px">
-						<p id="chall20_points"></p>
-						<p id="chall20_html"></p>
-						<p><a id="chall20_file"></a></p>
-					</div>
-					<a href="#" onclick="loadChallange('21')"><img style="margin-top: -61px; margin-left: 0px;" src="/images/orangechallenge.jpg"></a>
-					<div id="chall21" class="description" style="top: -135px; margin-left: 163px">
-						<p id="chall21_points"></p>
-						<p id="chall21_html"></p>
-						<p><a id="chall21_file"></a></p>
-					</div>
+					<a href="#" onclick="loadChallange('19')"><img id="chall19_img" style="margin-top: -61px; margin-left: -136px;" src="/images/orangechallenge.jpg"></a>
+					<a href="#" onclick="loadChallange('20')"><img id="chall20_img" style="margin-top: -61px; margin-left: -68px;" src="/images/orangechallenge.jpg"></a>
+					<a href="#" onclick="loadChallange('21')"><img id="chall21_img" style="margin-top: -61px; margin-left: 0px;" src="/images/orangechallenge.jpg"></a>
 				</div>
 			</div>
-			<div id="block6" style="z-index: 1; width: 136px; height: 122px; bottom: 360px; left: 290px;" class="challenge_layout2">				<a href="#" onclick="displayList('list6')"><img style="margin-top: 0px;" src="/images/yellowchallenge.jpg" alt="list4"></a>
+			<div id="block6" style="z-index: 1; width: 136px; height: 122px; bottom: 360px; left: 290px;" class="challenge_layout2">				
+				<a href="#" onclick="displayList('list6')"><img style="margin-top: 0px;" src="/images/yellowchallenge.jpg" alt="list4"></a>
 				<div id="list6" class="challList" style="visibility: hidden">
-					<a href="#" onclick="loadChallange('19')"><img style="margin-top: -61px; margin-left: -136px;" src="/images/yellowchallenge.jpg"></a>
-					<div id="chall19" class="description" style="top: -135px; margin-left: 27px">
-						<p id="chall19_points"></p>
-						<p id="chall19_html"></p>
-						<p><a id="chall19_file"></a>
-					</div>
-					<a href="#" onclick="loadChallange('20')"><img style="margin-top: -61px; margin-left: -68px;" src="/images/yellowchallenge.jpg"></a>
-					<div id="chall20" class="description" style="top: -135px; margin-left: 95px">
-						<p id="chall20_points"></p>
-						<p id="chall20_html"></p>
-						<p><a id="chall20_file"></a></p>
-					</div>
-					<a href="#" onclick="loadChallange('21')"><img style="margin-top: -61px; margin-left: 0px;" src="/images/yellowchallenge.jpg"></a>
-					<div id="chall21" class="description" style="top: -135px; margin-left: 163px">
-						<p id="chall21_points"></p>
-						<p id="chall21_html"></p>
-						<p><a id="chall21_file"></a></p>
-					</div>
-					<a href="#" onclick="loadChallange('22')"><img style="margin-top: -122px; margin-left: 136px;" src="/images/yellowchallenge.jpg"></a>
-					<div id="chall22" class="description" style="top: -135px; margin-left: 231px">
-						<p id="chall22_points"></p>
-						<p id="chall22_html"></p>
-						<p><a id="chall22_file"></a></p>
-					</div>
-					<a href="#" onclick="loadChallange('23')"><img style="margin-top: -122px; margin-left: 204px;" src="/images/yellowchallenge.jpg"></a>
-					<div id="chall23" class="description" style="top: -135px; margin-left: 299px">
-						<p id="chall23_points"></p>
-						<p id="chall23_html"></p>
-						<p><a id="chall23_file"></a></p>
-					</div>
-					<a href="#" onclick="loadChallange('24')"><img style="margin-top: -122px; margin-left: 272px;" src="/images/yellowchallenge.jpg"></a>
-					<div id="chall24" class="description" style="top: -135px; margin-left: 367px">
-						<p id="chall24_points"></p>
-						<p id="chall24_html"></p>
-						<p><a id="chall24_file"></a></p>
-					</div>
+					<a href="#" onclick="loadChallange('22')"><img id="chall22_img" style="margin-top: -61px; margin-left: -68px;" src="/images/yellowchallenge.jpg"></a>
+					<a href="#" onclick="loadChallange('23')"><img id="chall23_img" style="margin-top: -122px; margin-left: 68px;" src="/images/yellowchallenge.jpg"></a>
+					<a href="#" onclick="loadChallange('24')"><img id="chall24_img" style="margin-top: -122px; margin-left: 136px;" src="/images/yellowchallenge.jpg"></a>
 				</div>
 			</div>
 		</div>
