Login error implemented EnterKey implemented

--- a/source/scoreboard/level2.html
+++ b/source/scoreboard/level2.html
@@ -38,7 +38,7 @@
 				</div>
 				<div id="submit">
 					<label>Submit Flag</label>
-					<form>
+					<form id="submit_flag_form">
 						<input type="text" id="flag" name="flag" value="flag{insert_flag_here}" onclick="this.value='';">
 						<input type="button" name="submit" value="submit" onclick="submit_flag()">
 					</form>
