--- a/source/scoreboard/login.html
+++ b/source/scoreboard/login.html
@@ -8,13 +8,21 @@
 	<title>Poli CTF 2015</title>
 </head>
 <body>
+
+
+
 	<h2 class="center">Login Page</h2>
-	<form class="center">
+	<form class="center" id="login_form" onclick="$('#result_login').hide()">
 		<label>Username</label><br /><input name="username" id="username" /><br /><br />
-		<label>Password</label><br /><input type="password" name="password" id="password" /><br /><br />
-		<span id="login" onclick="login()" onmouseover="onbutton('login');" onmouseout="offbutton('login');">Login</span></br>
-		<br /><span id="logintest" onclick="loginTEST()" onmouseover="onbutton('logintest');" onmouseout="offbutton('logintest');">LoginTEST</span></br>
+		<label>Password</label><br /><input type="password" name="password" id="password" /><br /><br /><br />
+		<span id="login" onclick="login()" onmouseover="onbutton('login');" onmouseout="offbutton('login');">Login</span>
+		<span id="logintest" onclick="loginTEST()" onmouseover="onbutton('logintest');" onmouseout="offbutton('logintest');">LoginTEST</span></br>
 	</form>
+
+	<div id="result_login" class="result_class" onclick="$('#result_login').hide()">
+		<h2 id="X"><span style="text-align: right" onclick="$('#result_login').hide()">X</span></h2>
+		<h2 id="result_login_data" class="center"></h2>
+	</div>
 
 	<script>
 		function onbutton(id) {
