fixed register entry

--- a/source/layout.html
+++ b/source/layout.html
@@ -48,7 +48,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Registration <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="registration.html">Register</a></li>
-                  <li><a href="http://s.maggi.cc/polictf2015-local" target="_blank">for PoliMi students</a></li>
+                  <li><a href="http://s.maggi.cc/polictf2015-local" target="_blank">PoliMi students</a></li>
                 </ul>
               </li>
                     <li>
