--- a/source/scoreboard/challenges.html
+++ b/source/scoreboard/challenges.html
@@ -8,9 +8,9 @@
 	<link rel='stylesheet' href="/css/formhelpers.min.css" />
 	<script type="text/javascript" src="/js/jquery.js"></script>
 	<script type="text/javascript" src="/js/scoreboard.js"></script>
-	<title>PoliCTF 2015 | Rankings</title>
+	<title>PoliCTF 2015 | Challenges</title>
 </head>
-<body onload="getScores();">
+<body onload="getChallengesList();">
 	<div id="cloud1">
 		<img src="/images/cloud.png" alt="cloud">
 	</div>
@@ -28,12 +28,12 @@
 				</div>
 			</div>
 			<ul class="header">
-				<li>#</li>
-				<li>Team</li>
-				<li>Country</li>
-				<li>Points</li>
+				<li>Category</li>
+				<li>Name</li>
+				<li>Point</li>
+				<li>Team solved</li>
 			</ul>
-			<div id="scores">
+			<div id="solved_chall">
 			</div>
 		</div>
 	</div>
